refactoring order service