@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.epam.havryliuk</groupId>
-  <artifactId>Restaurant</artifactId>
+  <artifactId>restaurant</artifactId>
   <version>0.2</version>
   <packaging>war</packaging>
 
@@ -16,7 +16,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <jakarta.servlet.version>6.0.0</jakarta.servlet.version>
-    <log4j.version>2.17.0</log4j.version>
+    <log4j.version>2.19.0</log4j.version>
   </properties>
 
   <dependencies>
@@ -39,8 +39,9 @@
     <dependency>
       <groupId>jakarta.servlet.jsp.jstl</groupId>
       <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
-      <version>2.0.0</version>
+      <version>3.0.0</version>
     </dependency>
+
 
     <!-- https://mvnrepository.com/artifact/jakarta.servlet.jsp/jakarta.servlet.jsp-api -->
     <dependency>
@@ -58,6 +59,8 @@
       <version>8.0.31</version>
     </dependency>
 
+
+
     <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -66,13 +69,58 @@
       <scope>test</scope>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <version>5.9.1</version>
+    </dependency>
+
+<!--    &lt;!&ndash; https://mvnrepository.com/artifact/org.mockito/mockito-core &ndash;&gt;-->
+<!--    <dependency>-->
+<!--      <groupId>org.mockito</groupId>-->
+<!--      <artifactId>mockito-core</artifactId>-->
+<!--      <version>4.11.0</version>-->
+<!--      <scope>test</scope>-->
+<!--    </dependency>-->
+
+
+    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter -->
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>4.8.0</version>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <version>4.11.0</version>
       <scope>test</scope>
     </dependency>
+
+
+
+
+    <!-- https://mvnrepository.com/artifact/org.powermock/powermock-core -->
+<!--    <dependency>-->
+<!--      <groupId>org.powermock</groupId>-->
+<!--      <artifactId>powermock-core</artifactId>-->
+<!--      <version>2.0.9</version>-->
+<!--      <scope>test</scope>-->
+<!--    </dependency>-->
+
+    <!--    &lt;!&ndash; https://mvnrepository.com/artifact/org.powermock/powermock-module-junit4 &ndash;&gt;-->
+<!--    <dependency>-->
+<!--      <groupId>org.powermock</groupId>-->
+<!--      <artifactId>powermock-module-junit4</artifactId>-->
+<!--      <version>2.0.9</version>-->
+<!--      <scope>test</scope>-->
+<!--    </dependency>-->
+
+    <!-- https://mvnrepository.com/artifact/org.powermock/powermock-api-mockito2 -->
+<!--    <dependency>-->
+<!--      <groupId>org.powermock</groupId>-->
+<!--      <artifactId>powermock-api-mockito2</artifactId>-->
+<!--      <version>2.0.9</version>-->
+<!--      <scope>test</scope>-->
+<!--    </dependency>-->
+
+
+
 
     <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
     <dependency>
@@ -87,10 +135,22 @@
       <version>${log4j.version}</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j-impl</artifactId>
+      <version>${log4j.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+
+
+
+
     <dependency>
       <groupId>org.jetbrains</groupId>
       <artifactId>annotations</artifactId>
-      <version>RELEASE</version>
+      <version>23.1.0</version>
       <scope>compile</scope>
     </dependency>
 
@@ -102,12 +162,18 @@
       <version>2.11</version>
     </dependency>
 
+<!--    <dependency>-->
+<!--      <groupId>junit</groupId>-->
+<!--      <artifactId>junit</artifactId>-->
+<!--      <version>RELEASE</version>-->
+<!--      <scope>test</scope>-->
+<!--    </dependency>-->
 
 
   </dependencies>
 
   <build>
-    <finalName>Restaurant</finalName>
+    <finalName>restaurant</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
@@ -139,6 +205,17 @@
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
         </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <configuration>
+            <argLine>
+              --add-opens java.base/java.lang=ALL-UNNAMED
+            </argLine>
+          </configuration>
+        </plugin>
+
       </plugins>
     </pluginManagement>
       <plugins>
@@ -147,10 +224,16 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.10.1</version>
             <configuration>
-              <source>17</source>
-              <target>17</target>
+              <source>1.8</source>
+              <target>1.8</target>
+<!--              <source>17</source>-->
+<!--              <target>17</target>-->
               </configuration>
           </plugin>
+
+
+
+
       </plugins>
   </build>
 </project>
